Refactor TurMultiValue and TurAemTargetAttrValueMap for type safety
Replaces generic singleItem and addWithSingleValue methods with type-specific overloads for better type safety and clarity. Adds collection-based factory methods to TurMultiValue for various types. Updates TurSolrField and tests to align with new method signatures and behaviors.