@@ -1,22 +1,18 @@
 /*
- * Copyright (C) 2016-2022 the original author or authors. 
+ * Copyright (C) 2016-2022 the original author or authors.
  *
- * Licensed to the Apache Software Foundation (ASF) under one
- * or more contributor license agreements.  See the NOTICE file
- * distributed with this work for additional information
- * regarding copyright ownership.  The ASF licenses this file
- * to you under the Apache License, Version 2.0 (the
- * "License"); you may not use this file except in compliance
- * with the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
+ * agreements. See the NOTICE file distributed with this work for additional information regarding
+ * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance with the License. You may obtain a
+ * copy of the License at
  *
- *   http://www.apache.org/licenses/LICENSE-2.0
+ * http://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing,
- * software distributed under the License is distributed on an
- * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- * KIND, either express or implied.  See the License for the
- * specific language governing permissions and limitations
- * under the License.
+ * Unless required by applicable law or agreed to in writing, software distributed under the License
+ * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
+ * or implied. See the License for the specific language governing permissions and limitations under
+ * the License.
  */
 package com.viglet.turing.solr;
 
@@ -34,6 +30,7 @@ public class TurSolrField {
 	private TurSolrField() {
 		throw new IllegalStateException("TurSolrField class");
 	}
+
 	public static String convertFieldToString(Object attrValue) {
 		switch (attrValue) {
 			case null -> {
@@ -77,18 +74,26 @@ public class TurSolrField {
 	}
 
 	private static String arrayListToString(ArrayList<?> arrAttValue) {
-		if (arrAttValue == null) {
+		if (arrAttValue == null || arrAttValue.isEmpty()) {
 			return EMPTY_STRING;
-		} else if (arrAttValue.getFirst() instanceof String stringValue) {
+		}
+		Object firstElement = arrAttValue.get(0);
+		if (firstElement == null) {
+			return EMPTY_STRING;
+		}
+		if (firstElement instanceof String stringValue) {
 			return stringValue.trim();
-		} else if (arrAttValue.getFirst() instanceof Long longValue) {
-			return longValue.toString().trim();
-		} else if (arrAttValue.getFirst() instanceof Date dateValue) {
-			return dateValue.toString().trim();
+		} else if (firstElement instanceof Long longValue) {
+			return longValue.toString();
+		} else if (firstElement instanceof Date dateValue) {
+			SimpleDateFormat simpleDateFormat = new SimpleDateFormat(DATE_FORMAT);
+			simpleDateFormat.setTimeZone(TimeZone.getTimeZone(GMT));
+			return simpleDateFormat.format(dateValue);
 		} else {
-			return ((String) arrAttValue.getFirst()).trim();
+			return firstElement.toString().trim();
 		}
 	}
+
 	private static String longToString(Long longValue) {
 		return longValue.toString();
 	}
